--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,25 @@
     "name": "marmelab/dobble-php",
     "license": "MIT",
     "description": "Command-line card generator for dobble-like game",
+    "authors": [
+        {
+            "name": "kmaschta",
+            "email": "kevin@marmelab.com"
+        }
+    ],
     "autoload": {
-       "psr-4": {"": "src/"}
+        "psr-4": {"": "src/"}
     },
     "require": {
         "symfony/console": "^2.7"
+    },
+    "autoload-dev": {
+        "psr-4": {"": "tests/"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0"
+    },
+    "scripts": {
+        "test": ["phpunit"]
     }
 }
