--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "autoload": {
-        "psr-4": {"": "src/"}
+        "psr-4": {"Marmelab\\": "src/"}
     },
     "require": {
         "symfony/console": "^2.7"
