--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "psr-4": {"Marmelab\\": "src/"}
     },
     "require": {
+        "php": ">=7",
         "symfony/console": "^2.7"
     },
     "require-dev": {
